<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appdesigner.android.ptcustomermanager.ReceiptActivity">

    <fragment
        android:layout_height="wrap_content"
        android:layout_width="368dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_logged_in"
        android:name="com.appdesigner.android.ptcustomermanager.LoggedInFragment"
        android:id="@+id/loggedInFragment"/>

    <EditText
        android:id="@+id/receiptEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/signatureEditText"
        android:text="@string/receipt_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loggedInFragment"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="23dp"
        android:id="@+id/dateTextView"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/receiptEditText"
        android:text="@string/receipt_date_label"
        android:textSize="18sp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:id="@+id/dateTextView2"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/receiptEditText"
        android:text="@string/receipt_date"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/dateTextView"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:id="@+id/amountTextView"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        android:text="@string/amount_received_label"
        android:textSize="18sp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:id="@+id/amountTextView2"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView2"
        android:text="@string/amount_received"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/amountTextView"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:id="@+id/receivedDateTextView"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/amountTextView"
        android:text="@string/received_date_label"
        android:textSize="18sp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:id="@+id/receivedDateTextView2"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/amountTextView2"
        android:text="@string/received_date"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/receivedDateTextView"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:id="@+id/paymentTextView"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/receivedDateTextView"
        android:text="@string/payment_method_label"
        android:textSize="18sp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:id="@+id/paymentTextView2"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/receivedDateTextView2"
        android:text="@string/payment_method"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/paymentTextView"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:id="@+id/signatureTextView"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/paymentTextView"
        android:text="@string/signature_label"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/signatureEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signatureTextView"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        android:id="@+id/emailButton"
        android:layout_marginStart="50dp"
        android:text="@string/email_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="50dp"
        android:id="@+id/printButton"
        android:layout_marginEnd="50dp"
        android:text="@string/print_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>
