<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appdesigner.android.ptcustomermanager.NewSessionActivity">

    <fragment
        android:id="@+id/loggedInFragment"
        android:name="com.appdesigner.android.ptcustomermanager.LoggedInFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_logged_in"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/newSessionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="@string/new_session_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loggedInFragment"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/selectCustomerTextView"
        app:layout_constraintTop_toBottomOf="@+id/newSessionEditText"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/select_customer"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:clickable="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/pickDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/selectCustomerTextView"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/pick_date"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/pickTimeTextView"
        app:layout_constraintTop_toBottomOf="@+id/pickDateTextView"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/pick_time"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <CheckBox
        android:id="@+id/payNowCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="22dp"
        android:checked="false"
        android:onClick="onClick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickTimeTextView"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/payNowTextView"
        app:layout_constraintTop_toBottomOf="@+id/pickTimeTextView"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/pay_now"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"/>

    <EditText
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:id="@+id/notesEditText"
        app:layout_constraintTop_toBottomOf="@+id/payNowTextView"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        android:layout_marginBottom="8dp"
        android:hint="@string/new_session_notes"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:onClick="onClick"
        android:text="@string/cancel_button"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:onClick="onClick"
        android:text="@string/create_button"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
